Solidify Modifier does not work with 'beveled' Curve objects #59389

Closed
opened 2018-12-14 22:47:12 +01:00 by Bastien Montagne · 13 comments

Current Blender2.8.

Everything in the title really, reported by @fclem after fixing drawing for modified curves, see file below.

In #57972#580258, @fclem wrote:
I've fixed modifier display for curves.

bug_curve_solidify.blend

Seems like all Deforming modifiers are working correctly except the solidify modifier.

Will check asap.

Current Blender2.8. Everything in the title really, reported by @fclem after fixing drawing for modified curves, see file below. > In #57972#580258, @fclem wrote: > I've fixed modifier display for curves. > > [bug_curve_solidify.blend](https://archive.blender.org/developer/F5953193/bug_curve_solidify.blend) > > Seems like all Deforming modifiers are working correctly except the solidify modifier. Will check asap.
Bastien Montagne self-assigned this 2018-12-14 22:47:12 +01:00
Author
Owner

Added subscribers: @fclem, @mont29

Added subscribers: @fclem, @mont29

#59834 was marked as duplicate of this issue

#59834 was marked as duplicate of this issue

#59671 was marked as duplicate of this issue

#59671 was marked as duplicate of this issue

Added subscriber: @mathieu.frossard

Added subscriber: @mathieu.frossard
Author
Owner

Added subscriber: @i080457

Added subscriber: @i080457
Author
Owner

Curve modifier code actually never ensures that operand has normals (when modifier requests them)…

Curve modifier code actually never ensures that operand has normals (when modifier requests them)…

This issue was referenced by f1bf604804

This issue was referenced by f1bf604804f9652378ecdfb7d5afaa5ee99d4a24
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @g3ntile

Added subscriber: @g3ntile

Blender crashes adding the Solidify modifier on beveled curves with more than one material (to make inverted hull outlines, for example).
In the attached file the Solidify was turned off to add the second material. If I turn it on Blender crashes.
If the curve already has 2 materials it crashes when I add the Solidify.
Tested using the latest buildbot version on OS X 10.13.6.
This is my first report please forgive me If I did something wrong.
{F6093964}solidifiyCurveTest.blend

Blender crashes adding the Solidify modifier on beveled curves with more than one material (to make inverted hull outlines, for example). In the attached file the Solidify was turned off to add the second material. If I turn it on Blender crashes. If the curve already has 2 materials it crashes when I add the Solidify. Tested using the latest buildbot version on OS X 10.13.6. This is my first report please forgive me If I did something wrong. {[F6093964](https://archive.blender.org/developer/F6093964/system-info.txt)}[solidifiyCurveTest.blend](https://archive.blender.org/developer/F6093962/solidifiyCurveTest.blend)
Author
Owner

@g3ntile please make a new report, this is most likely an entirely different problem (feel free to assign it to me directly).

@g3ntile please make a new report, this is most likely an entirely different problem (feel free to assign it to me directly).

I downloaded build a4e4c9f0ab89 on Dec 28 and loaded my 2.79 Blend file.
Solidify is now working.
Thank you.

I downloaded build a4e4c9f0ab89 on Dec 28 and loaded my 2.79 Blend file. Solidify is now working. Thank you.

Yes that's work !! Thank you ;)

Yes that's work !! Thank you ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59389
No description provided.