Fix T59389: Solidify Modifier does not work with 'beveled' Curve objects.

Curve modifier eval code was actually doing nothing to ensure we passed
mesh with valid normals when required by the modifier.

This is a bit basic, rough code, but think it should cover all cases,
time will say...